Изменил начальную точку для Ньютона второго порядка

--- a/1_lab.ipynb
+++ b/1_lab.ipynb
@@ -293,11 +293,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "outputs": [],
    "source": [
     "N1 = newton(1, closest_left_node)\n",
-    "N2 = newton(2, closest_left_node)"
+    "N2 = newton(2, closest_left_node-1)"
    ],
    "metadata": {
     "collapsed": false,
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "outputs": [
     {
      "name": "stdout",
@@ -318,15 +318,15 @@
       "Полином Ньютона первого порядка: 4.36623437688988*x - 1.06755474475884\n",
       "\n",
       "\n",
-      "Полином Ньютона второго порядка: (x - 0.350000000000000)*(0.460434561142886*x - 0.161152096400010) + 4.36623437688988*x - 1.06755474475884\n",
+      "Полином Ньютона второго порядка: (x - 0.300000000000000)*(0.469588513253330*x - 0.140876553975999) + 4.31927552556454*x - 1.05111914679497\n",
       "\n",
       "При использовании первого порядка: 0.547951974690418\n",
-      "При использовании второго порядка: 0.548136148514876\n",
+      "При использовании второго порядка: 0.549313781378853\n",
       "Эталонное значние: 0.547672654393966\n",
       "Погрешность для полинома первого порядка: 0.000279320296452945\n",
-      "Погрешность для полинома второго порядка: 0.000463494120910068\n",
+      "Погрешность для полинома второго порядка: 0.00164112698488772\n",
       "Погрешности для Лагранжа и Ньютона первого порядка соответственно: 0.0510013224525775% 0.0510013224527397%\n",
-      "Погрешности для Лагранжа и Ньютона второго порядка соответственно: 0.000444209050781884% 0.0846297723998935%\n"
+      "Погрешности для Лагранжа и Ньютона второго порядка соответственно: 0.000444209050781884% 0.299654724719409%\n"
      ]
     }
    ],
