Вторая лабораторная, необъяснимые приколы

--- a/1_lab.ipynb
+++ b/1_lab.ipynb
@@ -9,10 +9,7 @@
     "Средствами sagemath введем переменую `x` и установим функцию"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -46,10 +43,7 @@
     "p.show()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -58,21 +52,14 @@
     "Функция `lagrange` конструирует интерполяционный полином Лагранжа `n`-ого порядка."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
    "execution_count": 106,
    "id": "ab5f1380",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def lagrange(n, values, nodes):\n",
@@ -91,11 +78,7 @@
    "cell_type": "code",
    "execution_count": 107,
    "id": "e9854654",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -121,11 +104,7 @@
    "cell_type": "code",
    "execution_count": 108,
    "id": "b8a14450",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "R1 = diff(y, x, 2)*(target_x-x_axis[closest_left_node])*(target_x-x_axis[closest_left_node+1])/2"
@@ -135,11 +114,7 @@
    "cell_type": "code",
    "execution_count": 109,
    "id": "9dd235a1",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "R2 = diff(y, x, 3)*(target_x-x_axis[closest_left_node-1])*(target_x-x_axis[closest_left_node])*(target_x-x_axis[closest_left_node+1])/6"
@@ -149,11 +124,7 @@
    "cell_type": "code",
    "execution_count": 110,
    "id": "74020f0c",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -185,11 +156,7 @@
    "cell_type": "code",
    "execution_count": 111,
    "id": "ade17320",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -212,11 +179,7 @@
    "cell_type": "code",
    "execution_count": 112,
    "id": "cb6c65cb",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -235,11 +198,7 @@
    "cell_type": "code",
    "execution_count": 113,
    "id": "cbfbd24c",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -260,21 +219,14 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
    "execution_count": 114,
    "id": "044d7333",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def divdif():\n",
@@ -306,10 +258,7 @@
     "    return polinomial\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -321,10 +270,7 @@
     "N2 = newton(2, closest_left_node-1)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -381,10 +327,7 @@
     "print(f\"Погрешность для полинома Лагранжа второго порядка: {abs(L2(x=target_x)-y(x=target_x))}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -424,10 +367,7 @@
     "    print(\"Квадратичная интерплояция Ньютоном недопустима\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -436,10 +376,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -470,10 +407,7 @@
     "print(divdiffer(2, closest_left_node-1))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -482,10 +416,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
