--- a/5_lab.ipynb
+++ b/5_lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 91,
    "outputs": [],
    "source": [
     "size = int(input(\"Введите размерность матрицы: \"))\n",
@@ -32,22 +32,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 92,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[19 39  0  0  0  0  0  0  0  0]\n",
-      "[65  1 45  0  0  0  0  0  0  0]\n",
-      "[ 0 46 21 13  0  0  0  0  0  0]\n",
-      "[ 0  0 90 24 40  0  0  0  0  0]\n",
-      "[ 0  0  0 24 21 47  0  0  0  0]\n",
-      "[ 0  0  0  0 91 13 26  0  0  0]\n",
-      "[ 0  0  0  0  0  0 18 39  0  0]\n",
-      "[ 0  0  0  0  0  0 38 13 85  0]\n",
-      "[ 0  0  0  0  0  0  0 65 19 70]\n",
-      "[ 0  0  0  0  0  0  0  0 60 35]\n"
+      "[85 65  0  0  0  0  0  0  0  0]\n",
+      "[35 37 27  0  0  0  0  0  0  0]\n",
+      "[ 0 52 75 57  0  0  0  0  0  0]\n",
+      "[ 0  0 20 21 17  0  0  0  0  0]\n",
+      "[ 0  0  0 40 61 47  0  0  0  0]\n",
+      "[ 0  0  0  0 37 21 72  0  0  0]\n",
+      "[ 0  0  0  0  0 80 62 78  0  0]\n",
+      "[ 0  0  0  0  0  0 68 25 44  0]\n",
+      "[ 0  0  0  0  0  0  0  6 50 14]\n",
+      "[ 0  0  0  0  0  0  0  0 62 11]\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 93,
    "outputs": [],
    "source": [
     "def get_right_side_vector(n: int) -> vector:\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 94,
    "outputs": [],
    "source": [
     "right_side = get_right_side_vector(size)"
@@ -84,13 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 95,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(28, 47, 66, 65, 77, 64, 95, 51, 35, 76)\n"
+      "(46, 82, 91, 76, 60, 24, 1, 99, 60, 46)\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 96,
    "outputs": [],
    "source": [
     "u_s = vector([var(f'u{i}') for i in range(size)])"
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 97,
    "outputs": [
     {
      "name": "stdout",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 98,
    "outputs": [],
    "source": [
     "equations = []\n",
@@ -151,13 +151,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 99,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[19*u0 + 39*u1 == 28, 65*u0 + u1 + 45*u2 == 47, 46*u1 + 21*u2 + 13*u3 == 66, 90*u2 + 24*u3 + 40*u4 == 65, 24*u3 + 21*u4 + 47*u5 == 77, 91*u4 + 13*u5 + 26*u6 == 64, 18*u6 + 39*u7 == 95, 38*u6 + 13*u7 + 85*u8 == 51, 65*u7 + 19*u8 + 70*u9 == 35, 60*u8 + 35*u9 == 76]\n"
+      "[85*u0 + 65*u1 == 46, 35*u0 + 37*u1 + 27*u2 == 82, 52*u1 + 75*u2 + 57*u3 == 91, 20*u2 + 21*u3 + 17*u4 == 76, 40*u3 + 61*u4 + 47*u5 == 60, 37*u4 + 21*u5 + 72*u6 == 24, 80*u5 + 62*u6 + 78*u7 == 1, 68*u6 + 25*u7 + 44*u8 == 99, 6*u7 + 50*u8 + 14*u9 == 60, 62*u8 + 11*u9 == 46]\n"
      ]
     }
    ],
@@ -170,63 +170,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 100,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[1;33mНайдено u0: -39/19*u1 + 28/19\u001B[0m\n",
-      "Подстановка в следующее уравнение: -2516/19*u1 + 45*u2 + 1820/19 == 47\n",
-      "\u001B[1;33mНайдено u1: 855/2516*u2 + 927/2516\u001B[0m\n",
-      "Подстановка в следующее уравнение: 46083/1258*u2 + 13*u3 + 21321/1258 == 66\n",
-      "\u001B[1;33mНайдено u2: -16354/46083*u3 + 20569/15361\u001B[0m\n",
-      "Подстановка в следующее уравнение: -121956/15361*u3 + 40*u4 + 1851210/15361 == 65\n",
-      "\u001B[1;33mНайдено u3: 153610/30489*u4 + 852745/121956\u001B[0m\n",
-      "Подстановка в следующее уравнение: 1442303/10163*u4 + 47*u5 + 1705490/10163 == 77\n",
-      "\u001B[1;33mНайдено u4: -477661/1442303*u5 - 922939/1442303\u001B[0m\n",
-      "Подстановка в следующее уравнение: -24717212/1442303*u5 + 26*u6 - 83987449/1442303 == 64\n",
-      "\u001B[1;33mНайдено u5: 1442303/950662*u6 - 176294841/24717212\u001B[0m\n",
-      "Подстановка в следующее уравнение: 18*u6 + 39*u7 == 95\n",
-      "\u001B[1;33mНайдено u6: -13/6*u7 + 95/18\u001B[0m\n",
-      "Подстановка в следующее уравнение: -208/3*u7 + 85*u8 + 1805/9 == 51\n",
-      "\u001B[1;33mНайдено u7: 255/208*u8 + 673/312\u001B[0m\n",
-      "Подстановка в следующее уравнение: 1579/16*u8 + 70*u9 + 3365/24 == 35\n",
-      "\u001B[1;33mНайдено u8: -1120/1579*u9 - 5050/4737\u001B[0m\n",
-      "Подстановка в следующее уравнение: -11935/1579*u9 - 101000/1579 == 76\n",
-      "\u001B[0;32mНайдено u9: -31572/1705\u001B[0m\n",
-      "Начинаем обратную подстановку\n",
-      "\u001B[0;32mНайдено u8: 12346/1023\u001B[0m\n",
-      "\u001B[0;32mНайдено u7: 225451/13299\u001B[0m\n",
-      "\u001B[0;32mНайдено u6: -32176/1023\u001B[0m\n",
-      "\u001B[0;32mНайдено u5: -1386945696871/25285707876\u001B[0m\n",
-      "\u001B[0;32mНайдено u4: 443147315489/25285707876\u001B[0m\n",
-      "\u001B[0;32mНайдено u3: 7228419204265/75857123628\u001B[0m\n",
-      "\u001B[0;32mНайдено u2: -284267981699/8752745034\u001B[0m\n",
-      "\u001B[0;32mНайдено u1: -41500676507/3890108904\u001B[0m\n",
-      "\u001B[0;32mНайдено u0: 30306130405/1296702968\u001B[0m\n",
-      "[30306130405/1296702968, -41500676507/3890108904, -284267981699/8752745034, 7228419204265/75857123628, 443147315489/25285707876, -1386945696871/25285707876, -32176/1023, 225451/13299, 12346/1023, -31572/1705]\n"
+      "Коэффиценты прогонки\n",
+      "[                         0                          0]\n",
+      "[                    -13/17                      46/85]\n",
+      "[                   -153/58                     536/87]\n",
+      "[                   551/601                 19955/5409]\n",
+      "[              -10217/23641               11984/212769]\n",
+      "[          -1111127/1033421           12286780/9300789]\n",
+      "[          37203156/9704929         115695962/87344361]\n",
+      "[     -378492231/1788979039    -9168332599/32201622702]\n",
+      "[    -7155916156/1726091297 1905703632115/170883038403]\n",
+      "[  -12082639079/21684533957 -196873248085/715589620581]\n",
+      "Уравнение 10 после подстновки: -510593749371/21684533957*u9 - 12206141381270/715589620581 == 46\n",
+      "Решение: u9 = -45123263927996/16849593729243\n",
+      "\n",
+      "Уравнение 9 после подстновки: 43369067914/1726091297*u8 + 77787681927835488162542/2643994281275646972561 == 60\n",
+      "Решение: u8 = 1864277440987/1531781248113\n",
+      "\n",
+      "Уравнение 8 после подстновки: 18987004267/1788979039*u7 + 93692086056501191566430/2740324545207415303407 == 99\n",
+      "Решение: u7 = 102891454367279/16849593729243\n",
+      "\n",
+      "Уравнение 7 после подстновки: 3577958078/9704929*u6 + 10579499833612655695202/18169345646794282083 == 1\n",
+      "Решение: u6 = -5903551834721/3744354162054\n",
+      "\n",
+      "Уравнение 6 после подстновки: -19409858/1033421*u5 - 375188268624310020688/5804241333756010101 == 24\n",
+      "Решение: u5 = -26506637020964/5616531243081\n",
+      "\n",
+      "Уравнение 5 после подстновки: 1033421/23641*u4 - 9717697046001877396/44260138372559307 == 60\n",
+      "Решение: u4 = 11973150679496/1872177081027\n",
+      "\n",
+      "Уравнение 4 после подстновки: 23641/601*u3 + 616050999156523796/3375535277091681 == 76\n",
+      "Решение: u3 = -15207068994440/5616531243081\n",
+      "\n",
+      "Уравнение 3 после подстновки: -1803/29*u2 + 3004892728286136/18097711783261 == 91\n",
+      "Решение: u2 = 2259568978385/1872177081027\n",
+      "\n",
+      "Уравнение 2 после подстновки: 174/17*u1 + 546661060389803/10609003459153 == 82\n",
+      "Решение: u1 = 11147490457267/3744354162054\n",
+      "\n",
+      "Уравнение 1 после подстновки: 85*u0 + 724586879722355/3744354162054 == 46\n",
+      "Решение: u0 = -32490975780463/18721770810270\n",
+      "\n",
+      "[-1.73546488255479, 2.97714638487935, 1.20692054255118, -2.70755531061517, 6.39530886305264, -4.71939634514052, -1.57665423173607, 6.10646499972920, 1.21706506283688, -2.67800308144422]\n"
      ]
     }
    ],
    "source": [
-    "vals = [0 for _ in range(size)]\n",
-    "for i in range(size):\n",
-    "    solution = solve(equations[i], u_s[i], solution_dict=True)\n",
-    "    if i != size-1:\n",
-    "        equations[i+1] = equations[i+1].substitute(solution[0])\n",
-    "        print(f\"\\033[1;33mНайдено {u_s[i]}: {solution[0][u_s[i]]}\\033[0m\")\n",
-    "        print(f\"Подстановка в следующее уравнение: {equations[i+1]}\")\n",
-    "    if i == size-1:\n",
-    "        print(f\"\\033[0;32mНайдено {u_s[i]}: {solution[0][u_s[i]]}\\033[0m\")\n",
-    "        vals[i] = solution[0][u_s[i]]\n",
-    "print(\"Начинаем обратную подстановку\")\n",
-    "for i in range(size-2, -1, -1):\n",
-    "    solution = solve(equations[i].substitute({u_s[i+1]:vals[i+1]}), u_s[i], solution_dict=True)[0]\n",
-    "    print(f\"\\033[0;32mНайдено {u_s[i]}: {solution[u_s[i]]}\\033[0m\")\n",
-    "    vals[i] = solution[u_s[i]]\n",
+    "tma_coefficents = [[0, 0 ] for i in range(size)]\n",
+    "tma_coefficents[1][0] = -coefficents_matrix[0][1]/coefficents_matrix[0][0]\n",
+    "tma_coefficents[1][1] = right_side[0]/coefficents_matrix[0][0]\n",
+    "for i in range(2, size):\n",
+    "    tma_coefficents[i][0] = -coefficents_matrix[i-1][i]/(coefficents_matrix[i-1][i-2]*tma_coefficents[i-1][0]+coefficents_matrix[i-1][i-1])\n",
+    "    tma_coefficents[i][1] = (right_side[i-1]-coefficents_matrix[i-1][i-2]*tma_coefficents[i-1][1])/(coefficents_matrix[i-1][i-2]*tma_coefficents[i-1][0]+coefficents_matrix[i-1][i-1])\n",
+    "tma_coefficents = Matrix(tma_coefficents)\n",
+    "print(\"Коэффиценты прогонки\")\n",
+    "print(tma_coefficents)\n",
+    "solutions = [0 for i in range(size)]\n",
+    "for i in range(size-1, -1, -1):\n",
+    "    after_substitution = None\n",
+    "    if i == 9:\n",
+    "        after_substitution = equations[i].substitute({\n",
+    "            u_s[i-1]: tma_coefficents[i][0]*u_s[i]+tma_coefficents[i][1]\n",
+    "        })\n",
+    "    elif i == 0:\n",
+    "        after_substitution = equations[i].substitute({\n",
+    "            u_s[i+1]: solutions[i+1]\n",
+    "        })\n",
+    "    else:\n",
+    "        after_substitution = equations[i].substitute({\n",
+    "            u_s[i-1]: tma_coefficents[i][0]*u_s[i]+tma_coefficents[i][1],\n",
+    "            u_s[i+1]: solutions[i+1]\n",
+    "        })\n",
+    "    print(f\"Уравнение {i+1} после подстновки: {after_substitution}\")\n",
+    "    solution = after_substitution.solve(u_s[i], solution_dict=True)\n",
+    "    print(f\"Решение: {u_s[i]} = {solution[0][u_s[i]]}\")\n",
+    "    print()\n",
+    "    solutions[i] = solution[0][u_s[i]]\n",
     "\n",
-    "print(vals)\n"
+    "print(list(map(RR, solutions)))"
    ],
    "metadata": {
     "collapsed": false
@@ -234,19 +261,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 101,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(30306130405/1296702968, -41500676507/3890108904, -284267981699/8752745034, 7228419204265/75857123628, 443147315489/25285707876, -1386945696871/25285707876, -32176/1023, 225451/13299, 12346/1023, -31572/1705)\n"
+      "[-1.73546488255479, 2.97714638487935, 1.20692054255118, -2.70755531061517, 6.39530886305264, -4.71939634514052, -1.57665423173607, 6.10646499972920, 1.21706506283688, -2.67800308144422]\n"
      ]
     }
    ],
    "source": [
     "etalonsolution = coefficents_matrix.solve_right(right_side)\n",
-    "print(etalonsolution)"
+    "print(list(map(RR, etalonsolution)))"
    ],
    "metadata": {
     "collapsed": false
@@ -254,31 +281,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 102,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[0;32mПогрешность для u0: 0\u001B[0m\n",
-      "\u001B[0;32mПогрешность для u1: 0\u001B[0m\n",
-      "\u001B[0;32mПогрешность для u2: 0\u001B[0m\n",
-      "\u001B[0;32mПогрешность для u3: 0\u001B[0m\n",
-      "\u001B[0;32mПогрешность для u4: 0\u001B[0m\n",
-      "\u001B[0;32mПогрешность для u5: 0\u001B[0m\n",
-      "\u001B[0;32mПогрешность для u6: 0\u001B[0m\n",
-      "\u001B[0;32mПогрешность для u7: 0\u001B[0m\n",
-      "\u001B[0;32mПогрешность для u8: 0\u001B[0m\n",
-      "\u001B[0;32mПогрешность для u9: 0\u001B[0m\n"
+      "\u001B[0;32mПогрешность для u0: 0.000000000000000\u001B[0m\n",
+      "\u001B[0;32mПогрешность для u1: 0.000000000000000\u001B[0m\n",
+      "\u001B[0;32mПогрешность для u2: 0.000000000000000\u001B[0m\n",
+      "\u001B[0;32mПогрешность для u3: 0.000000000000000\u001B[0m\n",
+      "\u001B[0;32mПогрешность для u4: 0.000000000000000\u001B[0m\n",
+      "\u001B[0;32mПогрешность для u5: 0.000000000000000\u001B[0m\n",
+      "\u001B[0;32mПогрешность для u6: 0.000000000000000\u001B[0m\n",
+      "\u001B[0;32mПогрешность для u7: 0.000000000000000\u001B[0m\n",
+      "\u001B[0;32mПогрешность для u8: 0.000000000000000\u001B[0m\n",
+      "\u001B[0;32mПогрешность для u9: 0.000000000000000\u001B[0m\n"
      ]
     }
    ],
    "source": [
     "for i in range(size):\n",
-    "    if abs(RR(vals[i])-etalonsolution[i]) < 1e-10:\n",
-    "        print(f\"\\033[0;32mПогрешность для {u_s[i]}: {abs(vals[i]-etalonsolution[i])}\\033[0m\")\n",
+    "    if abs(solutions[i]-etalonsolution[i]) < 1e-10:\n",
+    "        print(f\"\\033[0;32mПогрешность для {u_s[i]}: {RR(abs(solutions[i]-etalonsolution[i]))}\\033[0m\")\n",
     "    else:\n",
-    "        print(f\"\\033[0;31mПогрешность для {u_s[i]}: {abs(vals[i]-etalonsolution[i])}\\033[0m\")"
+    "        print(f\"\\033[0;31mПогрешность для {u_s[i]}: {RR(abs(solutions[i]-etalonsolution[i]))}\\033[0m\")"
    ],
    "metadata": {
     "collapsed": false
